@@ -1,5 +1,4 @@
 #!/bin/sh
-# Trigger a heap-clobbering bug in ptx from coreutils-6.10 and earlier.
 
 # Copyright (C) 2008-2014 Free Software Foundation, Inc.
 
@@ -19,11 +18,11 @@
 . "${srcdir=.}/tests/init.sh"; path_prepend_ ./src
 print_ver_ ptx
 
+# Trigger a heap-clobbering bug in ptx from coreutils-6.10 and earlier.
 # Using a long file name makes an abort more likely.
 # Even with no file name, valgrind detects the buffer overrun.
 f=01234567890123456789012345678901234567890123456789
 touch $f empty || framework_failure_
-
 
 # Specifying a regular expression ending in a lone backslash
 # would cause ptx to write beyond the end of a malloc'd buffer.
@@ -31,5 +30,15 @@ ptx -F '\'      $f < /dev/null  > out || fail=1
 ptx -S 'foo\'   $f < /dev/null >> out || fail=1
 ptx -W 'bar\\\' $f < /dev/null >> out || fail=1
 compare out empty || fail=1
+
+
+# Trigger an invalid heap reference noticed by gcc -fsanitize=address
+# from coreutils-8.22 and earlier.  As well as an invalid memory reference,
+# the issue can be seen in the output, with non deterministice whitespace
+# trimming when multiple files are specified.
+printf '%s\n' 'This is a ptx whitespace Trimming test' > ws.in
+ptx ws.in ws.in | sort | uniq -u > out
+compare /dev/null out || fail=1
+
 
 Exit $fail
